# features-pipeline

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
config/: entrypoint.yaml  entrypoint_adult.yaml
config/features/: adult.yaml  base.yaml
config/labels/: adult.yaml
docs/: README.md
docs/project/: architecture.md  current-status.md  structure.md
docs/tutorials/: 01-getting-started.md  02-learning-path-phases-4-9.md  03-configuration-deep-dive.md  04-experiment-tracking.md  05-tracing.md  06-criterion-benchmarking.md  07-rayon-parallelism.md  error-handling.md  library-quick-reference.md
examples/: README.md  polars_exploration.rs  serde_basics.rs
src/: errors.rs  lib.rs  main.rs
src/config/: entry.rs  mod.rs
src/pipeline/: features.rs  labels.rs  mod.rs
