[package]
name = "features-pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ndarray = "0.16.1"
polars = { version = "0.51.0", features = [
  "csv",
  "lazy",
  "parquet",
  "dtype-datetime",
  "strings",
  "temporal",
  "ndarray",
  "polars-ops",
  "to_dummies",
] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
tracing = "0.1.41"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
linfa = "0.8.0"
linfa-linear = "0.8.0"
chrono = "0.4.42"
thiserror = "2.0.17"

[dev-dependencies]
criterion = "0.5"
